+ Initial STB TTF implementation
 * SDL_TTF still needs to be fully deprecated
 * There are a couple of integration issues that still need to be resolved, such as with gameui.cpp
 * We could also rework what features we make use of in STB/Fontstash, and what we build on top of them...(such as additional caching, multiline support, the whole concept of how we handle text/fonts, etc)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,10 @@ if (NOT DEFINED EOS_ENABLED)
 	set (EOS_ENABLED 0)
 endif()
 
+if (NOT DEFINED ENABLE_OPENGL_DEBUG)
+	set (ENABLE_OPENGL_DEBUG 0)
+endif()
+
 # EOS Tokens
 
 if (DEFINED ENV{BUILD_ENV_PR} AND NOT DEFINED BUILD_ENV_PR) # TODO: We should make all environment variable checks in this file not overwrite whatever was explicitly passed in on the command line...
