fix compile errors
Signed-off-by: SheridanR <sheridan.rathbun@gmail.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,6 +26,7 @@ list(APPEND GAME_SOURCES
 	"${CMAKE_CURRENT_SOURCE_DIR}/actgeneral.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/actdoor.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/actladder.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/input.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/item_usage_funcs.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/entity.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/messages.cpp"
@@ -112,6 +113,7 @@ list(APPEND EDITOR_SOURCES
 	"${CMAKE_CURRENT_SOURCE_DIR}/opengl.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/objects.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/entity_editor.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/input.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/list.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/hash.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/files.cpp"
