--- a/src/ui/CMakeLists.txt
+++ b/src/ui/CMakeLists.txt
@@ -8,6 +8,8 @@ list(APPEND GAME_SOURCES
 	"${CMAKE_CURRENT_SOURCE_DIR}/Text.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/Widget.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/GameUI.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/LoadingScreen.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/MainMenu.cpp"
 )
 list(APPEND EDITOR_SOURCES
 	"${CMAKE_CURRENT_SOURCE_DIR}/Button.cpp"
@@ -18,6 +20,7 @@ list(APPEND EDITOR_SOURCES
 	"${CMAKE_CURRENT_SOURCE_DIR}/Slider.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/Text.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/Widget.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/LoadingScreen.cpp"
 )
 
 set(GAME_SOURCES ${GAME_SOURCES} PARENT_SCOPE)
