Fixed compilation on Linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -445,9 +445,12 @@ if (GAME_ENABLED)
 	  include_directories(${EXECINFO_INC})
 	  target_link_libraries(barony ${EXECINFO_LIB})
 	endif()
+	#if(LINUX)
+		target_link_libraries(barony -lpthread)
+	#endif(LINUX)
   endif()
   target_link_libraries(barony ${OPENGL_LIBRARIES})
-  target_link_libraries(barony ${THREADS_LIBRARIES})
+  target_link_libraries(barony ${THREADS_LIBRARIES}) # TODO: Not sure what this is doing, since it doesn't appear to be working in Linux!
   target_link_libraries(barony -lm) # TODO: In Visual Studio, I bet this is something else, right?
   if (NOT CMAKE_SYSTEM_NAME MATCHES "Haiku")
 	  target_link_libraries(barony -lc)
@@ -540,6 +543,9 @@ if (EDITOR_ENABLED)
 	  # 64 bit
 	  target_link_libraries(${EDITOR_EXE_NAME} -L/usr/lib64 -lstdc++)
 	endif()
+	#if(LINUX)
+		target_link_libraries(${EDITOR_EXE_NAME} -lpthread)
+	#endif(LINUX)
   endif()
   target_link_libraries(${EDITOR_EXE_NAME} ${OPENGL_LIBRARIES})
   target_link_libraries(${EDITOR_EXE_NAME} ${THREADS_LIBRARIES})
